--- a/styles.css
+++ b/styles.css
@@ -6,17 +6,21 @@ h1{
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 50;
+    background-color: rgb(39, 39, 39);
 }
 h2{
     color: rgb(214, 188, 158);
     font-family: 'Times New Roman', Times, serif;
     font-size: 35;
     font-weight: 500;
+    background-color: rgb(39, 39, 39);
 }
 p{
     color:rgb(221, 221, 221);
     font-size: 25;
+    background-color: rgb(39, 39, 39);
 }
 .aligncenter{
     text-align: center;
+    background-color: rgb(39, 39, 39);
 }
