--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,8 @@ p{
     text-align: center;
     background-color: rgb(39, 39, 39);
 }
+ul{
+    color:rgb(221, 221, 221);
+    font-size: 25;
+    background-color: rgb(39, 39, 39);
+}
